Fix visibility of the datetime widget

--- a/app/assets/stylesheets/supplementary.scss
+++ b/app/assets/stylesheets/supplementary.scss
@@ -83,6 +83,7 @@ html {
 .panel,
 .panel-heading,
 .modal-content,
+.bootstrap-datetimepicker-widget,
 #header {
     background-color: var(--secondary-background-color) !important;
     color: var(--secondary-foreground-color) !important;
